--- a/src/styles/filters.scss
+++ b/src/styles/filters.scss
@@ -87,7 +87,3 @@
     background-color: #c0f0f9;
   }
 }
-
-.hidden-group {
-  visibility: hidden;
-}
